--- a/app/src/main/res/layout/fragment_ad_page.xml
+++ b/app/src/main/res/layout/fragment_ad_page.xml
@@ -4,18 +4,83 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <ScrollView
         android:id="@+id/scroll_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"></ScrollView>
+        android:layout_below="@+id/ad_bottom_container"
+        android:layout_alignParentTop="true"
+        android:layout_above="@id/ad_bottom_container">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/image_pager"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"></android.support.v4.view.ViewPager>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/avatar"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:src="@null" />
+
+                <TextView
+                    android:id="@+id/user_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:singleLine="true"
+                    android:text="" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#B0B0B0"></View>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:textStyle="bold"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:text="" />
+
+                <TextView
+                    android:id="@+id/desc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
     <LinearLayout
+        android:id="@id/ad_bottom_container"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="@color/black"
         android:layout_alignParentBottom="true"
+        android:background="@color/black"
         android:orientation="horizontal">
 
         <TextView
@@ -23,18 +88,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="20dp"
-            android:textAllCaps="true"
             android:layout_weight="1"
-            android:textColor="@color/white"
             android:gravity="center"
-            android:text="350 UAH" />
+            android:text="350 UAH"
+            android:textAllCaps="true"
+            android:textColor="@color/white" />
 
         <View
             android:layout_width="1dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:background="#B0B0B0"
-            android:layout_marginTop="20dp"></View>
+            android:layout_marginTop="20dp"
+            android:background="#B0B0B0"></View>
 
         <TextView
             android:id="@+id/want"
@@ -42,10 +107,10 @@
             android:layout_height="match_parent"
             android:layout_margin="20dp"
             android:layout_weight="1"
-            android:textColor="#47E187"
             android:gravity="center"
+            android:text="@string/want"
             android:textAllCaps="true"
-            android:text="@string/want" />
+            android:textColor="#47E187" />
     </LinearLayout>
 
 
