--- a/app/src/main/res/layout/fragment_create_ad.xml
+++ b/app/src/main/res/layout/fragment_create_ad.xml
@@ -13,20 +13,42 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-
-            <ImageView
-                android:id="@+id/ad_image"
-                android:layout_width="match_parent"
+            <FrameLayout
+                android:layout_width="wrap_content"
                 android:layout_height="200dp"
-                android:src="@drawable/ic_add" />
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp">
+
+                <ImageView
+                    android:id="@+id/ad_image"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:background="@drawable/rectangle_bg"
+                    android:src="@drawable/ic_camera" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center|bottom"
+                    android:layout_toRightOf="@id/price"
+                    android:gravity="center"
+                    android:padding="3dp"
+                    android:singleLine="true"
+                    android:text="@string/add_main_photo"
+                    android:textSize="12dp" />
+            </FrameLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="100dp">
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp">
 
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="100dp"
                     android:layout_weight="1">
 
                     <ImageView
@@ -34,13 +56,26 @@
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/ic_add" />
+                        android:background="@drawable/rectangle_bg"
+                        android:src="@drawable/ic_camera" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center|bottom"
+                        android:layout_toRightOf="@id/price"
+                        android:gravity="center"
+                        android:padding="3dp"
+                        android:singleLine="true"
+                        android:text="@string/add_photo"
+                        android:textSize="12dp" />
                 </FrameLayout>
 
 
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="100dp"
                     android:layout_weight="1">
 
                     <ImageView
@@ -48,12 +83,25 @@
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/ic_add" />
+                        android:background="@drawable/rectangle_bg"
+                        android:src="@drawable/ic_camera" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center|bottom"
+                        android:layout_toRightOf="@id/price"
+                        android:gravity="center"
+                        android:padding="3dp"
+                        android:singleLine="true"
+                        android:text="@string/add_photo"
+                        android:textSize="12dp" />
                 </FrameLayout>
 
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="100dp"
                     android:layout_weight="1">
 
                     <ImageView
@@ -61,7 +109,20 @@
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/ic_add" />
+                        android:background="@drawable/rectangle_bg"
+                        android:src="@drawable/ic_camera" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center|bottom"
+                        android:layout_toRightOf="@id/price"
+                        android:gravity="center"
+                        android:padding="3dp"
+                        android:singleLine="true"
+                        android:text="@string/add_photo"
+                        android:textSize="12dp" />
                 </FrameLayout>
 
 
@@ -99,7 +160,7 @@
                     android:paddingBottom="20dp"
                     android:paddingLeft="20dp"
                     android:paddingTop="20dp"
-                    android:text="Категории" />
+                    android:text="@string/select_category" />
             </LinearLayout>
 
             <EditText
@@ -129,15 +190,15 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_toRightOf="@+id/price_tl"
+                    android:layout_toRightOf="@id/price_tl"
                     android:hint="@string/price_default_hint" />
 
                 <TextView
                     android:id="@+id/currency_tl"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/price"
                     android:layout_centerVertical="true"
+                    android:layout_toRightOf="@id/price"
                     android:text="@string/currency_uah" />
             </RelativeLayout>
 
